Adjusted for using with newer Android APIs