@@ -2,18 +2,16 @@ package org.as.mjpeg;
 
 import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
-
-import org.apache.http.HttpResponse;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.impl.client.DefaultHttpClient;
+import android.util.Log;
 
 import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
 import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.Properties;
 
 public class MjpegInputStream extends DataInputStream {
@@ -24,20 +22,23 @@ public class MjpegInputStream extends DataInputStream {
     private final static int FRAME_MAX_LENGTH = 40000 + HEADER_MAX_LENGTH;
     private int mContentLength = -1;
 	
-    public static MjpegInputStream read(String url) {
-        HttpResponse res;
-        DefaultHttpClient httpclient = new DefaultHttpClient();		
+    public static MjpegInputStream read(String urlString) {
+
         try {
-            res = httpclient.execute(new HttpGet(URI.create(url)));
-            return new MjpegInputStream(res.getEntity().getContent());
-        } catch (ClientProtocolException e) {
-        } catch (IOException e) {}
+            URL url = new URL(urlString);
+            InputStream in = new BufferedInputStream(url.openStream());
+            return new MjpegInputStream(in);
+        } catch (MalformedURLException e) {
+            Log.e("Erro", e.getMessage(), e);
+        } catch (IOException e) {
+            Log.e("Erro", e.getMessage(), e);
+        }
         return null;
     }
 	
     public MjpegInputStream(InputStream in) { super(new BufferedInputStream(in, FRAME_MAX_LENGTH)); }
 	
-    private int getEndOfSeqeunce(DataInputStream in, byte[] sequence) throws IOException {
+    private int getEndOfSequence(DataInputStream in, byte[] sequence) throws IOException {
         int seqIndex = 0;
         byte c;
         for(int i=0; i < FRAME_MAX_LENGTH; i++) {
@@ -51,7 +52,7 @@ public class MjpegInputStream extends DataInputStream {
     }
 	
     private int getStartOfSequence(DataInputStream in, byte[] sequence) throws IOException {
-        int end = getEndOfSeqeunce(in, sequence);
+        int end = getEndOfSequence(in, sequence);
         return (end < 0) ? (-1) : (end - sequence.length);
     }
 
@@ -71,7 +72,7 @@ public class MjpegInputStream extends DataInputStream {
         try {
             mContentLength = parseContentLength(header);
         } catch (NumberFormatException nfe) { 
-            mContentLength = getEndOfSeqeunce(this, EOF_MARKER); 
+            mContentLength = getEndOfSequence(this, EOF_MARKER);
         }
         reset();
         byte[] frameData = new byte[mContentLength];
